# doc-time-analyzer

./: .gitignore  README.md  activity.csv  activity_events.json  config.json  explain.csv  pyproject.toml  raw.json
src/doc_time_analyzer/: main.py
